--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 class="title">test</h1>
+    <h1 class="title">test site</h1>
     
   </body>
 </html>
